--- a/src/style.css
+++ b/src/style.css
@@ -72,3 +72,11 @@ button {
 .label-notes {
   font-size: 0.7rem;
 }
+
+.product-image {
+  float: right; 
+  max-width: 300px; 
+  visibility: hidden;  
+  margin-top: 50px;
+  margin-right: 50px;
+}
